--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
       <script src="p5.play.js"></script>
+      <script src="matter.js"></script>
       <script src="Bob.js"></script>
       <script src="Roof.js"></script>
       <script src="Rope.js"></script>
